  compress.bzip2 wraper. (Ilia)
- Fixed MOPB-22-2007 PHP session_regenerate_id() Double Free Vulnerability.
  (Ilia)
- Fixed MOPB-26-2007 mb_parse_str() can be used to activate
  register_globals. (Ilia)
- Fixed CVE-2007-1001, GD wbmp used with invalid image size (Pierre)
- Fixed CVE-2007-0455, Buffer overflow in gdImageStringFTEx (used by imagettf
  function) (Kees Cook, Pierre)
- Fixed bug #40831 (cURL extension doesn't clean up the buffer of reused 
  handle). (Tony)
- Fixed bug #40747 (possible crash in session when save_path is out of 
  open_basedir). (Tony)
- Fixed MOPB-8, XSS in phpinfo() (Joe Orton, Stas)
- Fixed unallocated memory access/double free in in array_user_key_compare() 
  (MOPB-24 by Stefan Esser) (Stas)

28 Feb 2007, Version 4.4.6

- Updated PCRE to version 7.0. (Nuno)
- Fixed segfault in ext/session when register_globals=On. (Tony)
- Fixed bug #40635 (segfault in cURL extension). (Tony)
- Fixed bug #40611 (possible cURL memory error). (Tony)
- Fixed bug #40578 (imagettftext() multithreading issue). (Tony)
- Fixed bug #40502 (ext/interbase compile failure). (Tony)
- Fixed bug #40286 (PHP fastcgi with PHP_FCGI_CHILDREN don't kill children when
  parent is killed). (Dmitry)
	
14 Feb 2007, Version 4.4.5
- Upgraded PEAR to 1.5.0. (Greg)
- Updated PCRE to version 6.7. (Ilia)
- Moved extensions to PECL:
  . ext/ovrimos (Derick)

- Added a meta tag to phpinfo() output to prevent search engines from 
  indexing the page. (Ilia)
- Backported a fix in the configure tests to detect the "rounding fuzz".
  (Derick, Joe Orton)
- Backported fix for ext/imap compilation failure with recent c-client 
  versions. (Tony)
- Fixed missing open_basedir check inside chdir() function. (Ilia)
- Fixed bug #40335 (Compile fails when using GCC 4.1.1/binutils 2.17). (Tony)
- Fixed bug #39971 (pg_insert/pg_update do not allow now() to be used for   
  timestamp fields). (Ilia)
- Fixed bug #39890 (using autoconf 2.6x and --with-layout=GNU breaks PEAR 